--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,7 +3,7 @@ modLoader="javafml"
 loaderVersion="[47,)" 
 license="All Rights Reserved"
 
-
+[[mods]] #mandatory
 modId="santan" 
 
 version="1.0" 
@@ -33,7 +33,7 @@ description='''OH OH OH... AH AH AH!'''
     # Does this dependency have to exist - if not, ordering below must be specified
     mandatory=true #mandatory
     # The version range of the dependency
-    versionRange="[47,)" #mandatory
+    versionRange="${forge_version_range}" #mandatory
     # An ordering relationship for the dependency - BEFORE or AFTER required if the dependency is not mandatory
     # BEFORE - This mod is loaded BEFORE the dependency
     # AFTER - This mod is loaded AFTER the dependency
