--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -10,7 +10,7 @@ version="1.0"
 
 displayName="Sa(N)ta(N)" 
 
-#logoFile="examplemod.png" 
+logoFile="santanmod.png" 
 
 credits="Made by Nitespring" 
 
