Updated to Neoforge 1.21.1

--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -7,6 +7,7 @@ modId="santan"
 version="1.0"
 displayName="Sa(N)ta(N)Craft"
 authors="Nitespring"
+logoFile="santancraftlogo.png"
 
 description='''Oh Oh Oh'''
 
