--- a/src/main/resources/data/santan/neoforge/biome_modifier/evil_snowman.json
+++ b/src/main/resources/data/santan/neoforge/biome_modifier/evil_snowman.json
@@ -1,9 +1,19 @@
 {
   "type": "neoforge:add_spawns",
-  "biomes": "#c:is_cold/overworld",
+  "biomes": {
+    "type": "neoforge:and",
+    "values":
+    [
+      "#minecraft:is_overworld",
+      {
+        "type": "neoforge:not",
+        "value": "#c:no_default_monsters"
+      }
+    ]
+  },
   "spawners": {
     "type": "santan:evil_snowman",
-    "weight": 100,
+    "weight": 120,
     "minCount": 1,
     "maxCount": 3
   }
