--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -4,10 +4,10 @@ license="All Rights Reserved"
 
 [[mods]]
 modId="santan"
-version="1.2.0.0"
+version="1.3.0.0"
 displayName="Sa(N)ta(N)Craft"
 authors="Nitespring"
-logoFile="santancraftlogo.png"
+logoFile="santancraftmod.png"
 
 description='''Oh Oh Oh'''
 
