Working on Snowy Tree

--- a/src/main/resources/data/minecraft/tags/entity_type/powder_snow_walkable_mobs.json
+++ b/src/main/resources/data/minecraft/tags/entity_type/powder_snow_walkable_mobs.json
@@ -3,6 +3,8 @@
   "values" : [
     "santan:elf",
     "santan:evil_snowman",
-    "santan:gingerbread_man"
+    "santan:gingerbread_man",
+    "santan:tree",
+    "santan:snowy_tree"
   ]
 }
